fixed to spacing between two animals.

--- a/animal.css
+++ b/animal.css
@@ -5,6 +5,11 @@ header h1{
     border-style: solid;
     padding: 20px;
 }
+main{
+    display: flex;
+    gap: 10px;
+    padding: 20px;
+}
 main h2{
     color: darkgoldenrod;
     text-align: left;
@@ -13,15 +18,17 @@ main h2{
 }
 main .allbear{
     display: flex;
+    flex-direction: column;
+    margin: 10px 0px 10px 0px;
 }
 main #bears{
     border-style: solid;
-    margin: 10px 500px 10px 0px;
 }
 main .allgiraffe{
     display: flex;
+    flex-direction: column;
+    margin: 10px 500px 10px 0px;
 }
 main #giraffes{
     border-style: solid;
-    margin: 10px 500px 10px 0px;
 }
